--- a/index.html
+++ b/index.html
@@ -500,6 +500,21 @@
         </footer>
     </div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- inclusão dos cookies  -->
+
+    <div class="cookies-container">
+        <div class="cookies-content">
+            <p>Permito o uso de cookies para:</p>
+            <div class="cookies-pref">
+                <label><input type="checkbox" checked data-function="analytics">Análise de Uso</label>
+                <label><input type="checkbox" checked data-function="marketing">Marketing</label>
+            </div>
+            <button class="cookies-save">Salvar e Continuar</button>
+        </div>
+    </div>
+    <script src="./cookies.js"></script>
+
 </body>
 
 </html>
