--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                     <li class="page-item">
                                         <a class="page-link" href="#">2</a>
                                     </li>
-                                    <li class="page-item disabled">
+                                    <li class="page-item">
                                         <a class="page-link" href="#">3</a>
                                     </li>
                                     <li class="page-item">
@@ -457,6 +457,9 @@
                                     </li>
                                     <li class="page-item">
                                         <a class="page-link" href="#">6</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">7</a>
                                     </li>
                                 </ul>
                             </nav>
