--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     </div>
 
     <script src="./scripts/cookies.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
 
 </body>
