--- a/index.html
+++ b/index.html
@@ -508,12 +508,13 @@
 
     <div class="cookies-container">
         <div class="cookies-content">
-            <p>Permito o uso de cookies para:</p>
+            <p> <strong>Renovamos nossa Política de Cookies</strong></p>
             <div class="cookies-pref">
-                <label><input type="checkbox" checked data-function="analytics">Análise de Uso</label>
-                <label><input type="checkbox" checked data-function="marketing">Marketing</label>
+                <span>Ao clicar em “CONCORDAR E FECHAR”, 
+                    você concorda com o armazenamento de cookies no seu dispositivo para melhorar a navegação no site, 
+                    analisar o uso do site e ajudar em nossos esforços de marketing.</span>
             </div>
-            <button class="cookies-save">Salvar e Continuar</button>
+            <button class="cookies-save"><strong>CONCORDAR E FECHAR</strong></button>
         </div>
     </div>
 
