--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
             <button class="cookies-save"><strong>CONCORDAR E FECHAR</strong></button>
         </div>
     </div>
+    <script src="scripts/cookies.js"></script>
 
     <script src="./scripts/cookies.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
