--- a/index.html
+++ b/index.html
@@ -508,7 +508,9 @@
 
     <div class="cookies-container">
         <div class="cookies-content">
-            <p> <strong>Renovamos nossa Política de Cookies</strong></p>
+            <div class="cookies-poopup">
+                <p> <strong>Renovamos nossa Política de Cookies</strong></p>
+            </div>
             <div class="cookies-pref">
                 <span>Ao clicar em “CONCORDAR E FECHAR”, 
                     você concorda com o armazenamento de cookies no seu dispositivo para melhorar a navegação no site, 
