--- a/login.html
+++ b/login.html
@@ -66,12 +66,12 @@
                         <h1>Identifique-se, por favor</h1>
 
                         <div class="form-floating mb-3">
-                            <input type="email" id="txtEmail" class="form-control" placeholder=" " autofocus>
+                            <input type="email" id="txtEmail" class="form-control" placeholder=" E-mail" autofocus required>
                             <label for="txtEmail">E-mail</label>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input type="password" id="txtSenha" class="form-control" placeholder=" ">
+                            <input type="password" id="txtSenha" class="form-control" placeholder=" Senha" required>
                             <label for="txtSenha">Senha</label>
                         </div>
 
@@ -80,7 +80,7 @@
                             <label for="chkLembrar" class="form-check-label">Lembrar de mim</label>
                         </div>
 
-                        <button type="button" onclick="window.location.href='cliente_pedidos.html'" class="btn btn-lg btn-danger">Entrar</button>
+                        <button type="button" onclick="logar()" id="send" class="btn btn-lg btn-danger">Entrar</button>
 
                         <p class="mt-3">
                             Ainda não é cadastrado? <a href="cadastro.html">Clique aqui</a> para se cadastrar.
@@ -127,6 +127,7 @@
             </div>
         </footer>
     </div>
+    <script src="scripts/login.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
