--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
     <script src="scripts/cookies.js"></script>
 
     <script src="./scripts/cookies.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 
 
 </body>
