--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -96,11 +96,11 @@
                                 <label for="txtNome">Nome</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="text" id="cpf" placeholder=" " />
+                                <input class="form-control" type="text" name="cpf" id="cpf" />
                                 <label for="txtCPF">CPF</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="date" id="txtDataNascimento" placeholder=" " />
+                                <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" />
                                 <label for="txtDataNascimento">Data de Nascimento</label>
                             </div>
                         </form>
@@ -171,7 +171,13 @@
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+
+    <!-- masck cpf  -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
     <script src="./scripts/validcpf.js"></script>
+
 </body>
 
 </html>
