--- a/cliente_dados.html
+++ b/cliente_dados.html
@@ -100,7 +100,7 @@
                                 <label for="txtCPF">CPF</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6 col-xl-4">
-                                <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" />
+                                <input class="form-control" type="date" name="dataNascimento" />
                                 <label for="txtDataNascimento">Data de Nascimento</label>
                             </div>
                         </form>
