--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -96,7 +96,7 @@
                                 <label for="txtEmail">E-mail</label>
                             </div>
                             <div class="form-floating mb-3 col-md-6">
-                                <input class="form-control" type="text" id="txtTelefone" placeholder=" " />
+                                <input class="form-control" type="tel" name="telefone" id="telefone" placeholder=" " />
                                 <label for="txtTelefone">Telefone</label>
                             </div>
                         </form>
@@ -167,6 +167,10 @@
 
     <script src="./scripts/topo.js"></script>
     <script src="./js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
+    <script src="./scripts/validcpf.js"></script>
 </body>
 
 </html>
