--- a/contato.html
+++ b/contato.html
@@ -93,7 +93,7 @@
                         </p>
 
                         <p class="mt-3">
-                            Atenciosamente,<br> Central de Relacionamento Quitanda Online
+                            Atenciosamente,<br> Central de Relacionamento <strong>Sacolão Avenida</strong>
                         </p>
                     </form>
                 </div>
